# lightgbm_viz

./: .gitignore  .pre-commit-config.yaml  README.md  STATUS.md  app.py  main.py  model.pkl  pyproject.toml  train_model.py  tree_extractor.py
backend/: influence.py  main.py  models.py  tree_extractor.py
example/: forest_viz.html  model.pkl
examples/: train_data.pkl
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts  nodeDistribution.ts
frontend/src/components/: AnalysisPage.tsx  ForestMap.tsx  LabelNode.tsx  LeafNode.tsx  LeafTooltip.tsx  SplitNode.tsx
frontend/src/layout/: forestLayout.ts
frontend/src/types/: forest.ts
src/: create_vizualization.py  influence.py  train_model.py  tree_extractor.py
