[project]
name = "lightgbm-viz"
version = "0.1.0"
description = "LightGBM forest visualization"
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
